fixed text wrapping and removed drop down

--- a/app/assets/stylesheets/performers.scss
+++ b/app/assets/stylesheets/performers.scss
@@ -46,5 +46,11 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  vertical-align: middle
+  vertical-align: middle;
+  padding-top: 55px;
+}
+
+div {
+width: 1250px;
+word-wrap: break-word;
 }
